--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": " vite",
     "build": "vite build",
-    "start": " node dist/assets/index.js",
+    "start": " tsx server/index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
